--- a/css/agency.css
+++ b/css/agency.css
@@ -289,11 +289,11 @@ header .intro-text .intro-lead-in {
 
 header .intro-text .intro-heading {
     margin-bottom: 25px;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 50px;
+    /*text-transform: uppercase;*/
+    font-family:  "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 25px;
+    font-weight: 25px;
+    /*line-height: 50px;*/
 }
 
 @media(min-width:768px) {
