--- a/css/agency.css
+++ b/css/agency.css
@@ -874,3 +874,28 @@ body {
 .about1 {
     font-size: 35px;
 }
+
+#resumeStuff{
+    position: left;
+    background-color: gray;
+    background: gray;
+}
+/*
+.Education {
+    border: 2px solid ;
+    border-radius: 5px;
+    padding-bottom: 108px;
+    border-spacing: 0 1em;
+}*/
+
+.spacer10 {
+    padding: 5px, 5px,;
+}
+
+/*.Experience {
+    border: 2px solid;
+    border-radius: 5px;
+    border-spacing: 0 1em;
+}*/
+
+
