--- a/css/agency.css
+++ b/css/agency.css
@@ -652,6 +652,7 @@ aside.clients img {
 }
 
 section#contact {
+    color: white;
     background-color: #222;
     background-image: url(/*../img/map-image.png*/);
     background-position: center;
